Ajout des comptes utilisateurs

--- a/app/src/main/res/menu/menu_depannage_list.xml
+++ b/app/src/main/res/menu/menu_depannage_list.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="charlesroger.informanet.DepannageList">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/actionMonCompte"
+        android:title="Mon Compte" />
+    <item
+        android:id="@+id/action_deconnexion"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="Déconnexion" />
 </menu>
