--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="charlesroger.informanet.Depannage.DepannageList">
+    tools:context="charlesroger.informanet.DepannagePackage.DepannageList">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
