--- a/app/src/main/res/layout/depannage_preview.xml
+++ b/app/src/main/res/layout/depannage_preview.xml
@@ -29,8 +29,10 @@
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/icon"
             app:layout_constraintEnd_toStartOf="@+id/icon"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/icon" />
+            app:layout_constraintTop_toTopOf="@+id/icon"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/icon"
@@ -46,42 +48,39 @@
         <TextView
             android:id="@+id/cardDescription"
             android:layout_width="335dp"
-            android:layout_height="37dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="57dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif"
             android:text="Description"
             android:textSize="26dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/icon" />
 
         <TextView
             android:id="@+id/cardDate"
-            android:layout_width="140dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="86dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="Date"
             app:layout_constraintBottom_toTopOf="@+id/cardDescription"
-            app:layout_constraintEnd_toStartOf="@+id/icon"
-            app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardTitre"
             app:layout_constraintVertical_bias="0.0" />
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="350dp"
-            android:layout_height="22dp"
+        <TextView
+            android:id="@+id/textViewIdentifiant"
+            android:layout_width="139dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_more" />
+            android:layout_marginTop="12dp"
+            android:text="Identifiant"
+            app:layout_constraintEnd_toStartOf="@+id/icon"
+            app:layout_constraintHorizontal_bias="0.81"
+            app:layout_constraintStart_toEndOf="@+id/cardDate"
+            app:layout_constraintTop_toBottomOf="@+id/cardTitre" />
 
     </android.support.constraint.ConstraintLayout>
 
